# session-lens

./: .env.example  .gitignore  AGENTS.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
src/session_lens/: __init__.py  analyzer.py  cli.py  mcp_server.py  models.py  storage.py
tests/: test_analyzer.py  test_models.py  test_storage.py
